# voice-notifier-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY.md
.github/workflows/: ci.yml  release.yml
docs/: PROJECT.md  TTS_RESEARCH.md
scripts/: install-kokoro-assets.sh  package-release.sh  smoke-test-binary.py
src/: main.rs  voice.rs
