[package]
name = "voice-notifier-mcp"
version = "0.1.0"
edition = "2024"
authors = ["Lorenzo Becchi"]
description = "A local MCP notification server with neural voice, desktop, and terminal channels."
license = "MIT"
repository = "https://github.com/ominiverdi/voice-notifier-mcp"
homepage = "https://github.com/ominiverdi/voice-notifier-mcp"
readme = "README.md"
keywords = ["mcp", "notifications", "kokoro", "tts", "pipewire"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
kokoro-en = { version = "=0.1.4", default-features = false, features = ["misaki-lean"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
